--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
+#idea files
+.idea/
+*.iml
 # End of https://www.gitignore.io/api/java
